# agents.ai

./: .gitignore  LICENSE  README.md  Sketch.ipynb  agents_behaviour.yaml  apicall.py  context_aware.py  conversation_history.json  final_version.py  main.py  prompts.py  pyproject.toml  small-eq.csv  tools.py
docs/: README.md  agent_architecture.md  mermaid_diagram.mermaid  research_paper.md
sketch/: Sketch.ipynb  context_aware.py  ipynb_dump.py
tool/: csv_script.py
